--- a/package.json
+++ b/package.json
@@ -25,25 +25,25 @@
   },
   "homepage": "https://github.com/Vandivier/afterecon#readme",
   "dependencies": {
-    "next": "^14.0.4",
-    "next-themes": "^0.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@tailwindcss/typography": "^0.5.10",
+    "autoprefixer": "^10.4.16",
+    "date-fns": "^2.30.0",
     "gray-matter": "^4.0.3",
     "markdown-it": "^13.0.1",
-    "date-fns": "^2.30.0",
-    "@tailwindcss/typography": "^0.5.10",
-    "tailwindcss": "^3.3.5",
-    "autoprefixer": "^10.4.16",
+    "next": "^14.0.4",
+    "next-themes": "^0.2.1",
     "postcss": "^8.4.31",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "remark": "^14.0.3",
-    "remark-html": "^15.0.2"
+    "remark-html": "^15.0.2",
+    "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
     "@types/node": "^20.9.3",
     "@types/react": "^18.2.38",
-    "typescript": "^5.3.2",
     "eslint": "^8.54.0",
-    "eslint-config-next": "^14.0.3"
+    "eslint-config-next": "^14.0.3",
+    "typescript": "^5.3.2"
   }
-} 
+}
