--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "start": "next start",
     "lint": "next lint",
     "convert": "node --loader ts-node/esm scripts/sql-to-json.ts && node --loader ts-node/esm scripts/json-to-markdown.ts",
-    "convert:sqlite": "node --loader ts-node/esm scripts/sql-to-json-with-sqlite.js",
-    "prebuild": "node --loader ts-node/esm scripts/build-content.ts"
+    "prebuild": "node --loader ts-node/esm scripts/build-content.ts",
+    "split:chunks": "node --loader ts-node/esm scripts/sql-to-json-by-chunk.ts"
   },
   "repository": {
     "type": "git",
