--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "convert": "node --loader ts-node/esm scripts/sql-to-json.ts && node --loader ts-node/esm scripts/json-to-markdown.ts",
-    "prebuild": "node --loader ts-node/esm scripts/build-content.ts",
-    "split:analyze:sql": "node --loader ts-node/esm scripts/analyze-sql.ts"
+    "convert": "node --loader ts-node/esm scripts/sql-to-json.ts && node --loader ts-node/esm scripts/analyze-sql.ts && node --loader ts-node/esm scripts/json-to-markdown.ts",
+    "prebuild": "node --loader ts-node/esm scripts/build-content.ts"
   },
   "repository": {
     "type": "git",
