--- a/package.json
+++ b/package.json
@@ -42,15 +42,17 @@
     "react-dom": "^18.2.0",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
+    "remark-parse": "^10.0.2",
     "tailwindcss": "^3.3.5",
-    "unified": "^10.1.0",
-    "remark-parse": "^10.0.2"
+    "unified": "^10.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.9.3",
     "@types/react": "^18.2.38",
     "eslint": "^8.54.0",
     "eslint-config-next": "^14.0.3",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.6",
     "ts-node": "^10.9.1",
