--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/Vandivier/afterecon#readme",
   "dependencies": {
+    "@next/third-parties": "^14.2.22",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
     "date-fns": "^2.30.0",
