fix: maybe: prod tailwind

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "next start",
     "lint": "next lint",
     "convert": "node --loader ts-node/esm scripts/sql-to-json.ts && node --loader ts-node/esm scripts/analyze-sql.ts && node --loader ts-node/esm scripts/json-to-markdown.ts",
-    "prebuild": "node --loader ts-node/esm scripts/build-content.ts"
+    "prebuild": "node --loader ts-node/esm scripts/build-content.ts",
+    "postbuild": "next-sitemap"
   },
   "repository": {
     "type": "git",
