--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "convert": "node --loader ts-node/esm scripts/sql-to-json.ts && node --loader ts-node/esm scripts/analyze-sql.ts && node --loader ts-node/esm scripts/json-to-markdown.ts",
-    "prebuild": "node --loader ts-node/esm scripts/build-content.ts",
-    "postbuild": "node --loader ts-node/esm scripts/build-sitemap.ts"
+    "convert": "./node_modules/.bin/tsx scripts/sql-to-json.ts",
+    "prebuild": "./node_modules/.bin/tsx scripts/build-content.ts",
+    "postbuild": "./node_modules/.bin/tsx scripts/build-sitemap.ts"
   },
   "repository": {
     "type": "git",
@@ -47,7 +47,9 @@
     "remark-html": "^15.0.2",
     "remark-parse": "^10.0.2",
     "tailwindcss": "^3.3.5",
-    "unified": "^10.1.0"
+    "unified": "^10.1.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "@types/node": "^20.9.3",
@@ -56,9 +58,8 @@
     "eslint-config-next": "^14.0.3",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.6",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "node-gyp": "^9.4.0",
+    "tsx": "^4.7.1"
   }
 }
